--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(/asc.jpg);
+    background-image: url(asc.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
