--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ form div div input{
 #submit{
     background-color: green;
     color:white;
+    margin: 0 0 15px 0;
 }
 
 @media screen and (max-width: 625px) {
